# LecGraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
docs/: IMPLEMENTATION_LOG.md  PROJECT_OVERVIEW.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/learning-path/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/graph/: GraphExplorer.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/lib/: api.ts  utils.ts
scripts/: process_video.py
src/api/: main.py  models.py
src/api/routes/: graph.py  learning_path.py  search.py  videos.py
src/config/: __init__.py  settings.py
src/config/prompts/: concept_extraction.txt  entity_resolution.txt  global_relationship_extraction.txt  relationship_extraction.txt  segment_naming.txt  unified_extraction.txt
src/db/: chroma_client.py  neo4j_client.py
src/pipeline/: audio_extractor.py  cross_linker.py  embeddings.py  entity_resolver.py  extractor.py  graph_builder.py  indexer.py  llm_utils.py  models.py  postprocessor.py  segmenter.py  transcriber.py
src/search/: engine.py  learning_path.py  models.py  prerequisites.py
tests/: test_api.py  test_cross_linker.py  test_entity_resolver.py  test_extractor.py  test_graph_builder.py  test_indexer.py  test_learning_path.py  test_models.py  test_postprocessor.py  test_prerequisites.py  test_search.py  test_segmenter.py
(+1 files in other folders)
